fix header dont show on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -163,6 +163,9 @@ div.social a:hover { color: #1EAEDB; }
     }
 }
 @media (max-width: 549px) {
+    body {
+        display: block;
+    }
     div.container header {
         text-align: center;
     }
